--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
-@import url(https://fonts.googleapis.com/css?family=Oxygen:400,700,300);
+@import url(https://fonts.googleapis.com/css?family=Dosis:400,700,300);
 body {
-  font-family: Oxygen; }
+  font-family: "Dosis", sans-serif; }
 
 .cover {
   padding-left: 0;
@@ -12,7 +12,8 @@ body {
   width: 190px; }
 .header .input-custom {
   height: 56px;
-  font-size: 27px; }
+  font-size: 27px;
+  border: 1px solid #000; }
 @media screen and (max-width: 768px) {
   .header button {
     width: 100%; } }
@@ -36,5 +37,15 @@ body {
 .footer-description {
   text-align: center;
   margin-bottom: 20px; }
+
+.btn-default {
+  background-color: #ffcc00;
+  color: #000;
+  border: 1px solid #000; }
+
+.btn-default:hover {
+  background-color: #E4B600;
+  color: #000;
+  border: 1px solid #000; }
 
 /*# sourceMappingURL=main.css.map */
