--- a/css/results.scss
+++ b/css/results.scss
@@ -3,7 +3,13 @@
 }
 .image{
 	margin-top: 50px;
+	margin-bottom: 30px;
 	img{
 		height: 100px;
+		margin: 0px auto;
 	}
+}
+
+.box {
+	border: 1px solid #000;
 }
